Implementar imágenes URL, iconos y corregir rutas de assets locales

--- a/index.html
+++ b/index.html
@@ -52,74 +52,59 @@
                 <h1 class="hero-title animate-hero">David Neuenschwander</h1>
                 <p class="hero-subtitle animate-hero">Desarrollador Full-Stack y Creador de Experiencias en Unity y VR</p>
             </div>
-            <a href="#sobre-mi" class="scroll-down-indicator">
-                <span></span>
-            </a>
+            <a href="#sobre-mi" class="scroll-down-indicator"><span></span></a>
         </section>
 
-        <!-- 2. Sección Sobre Mí -->
+        <!-- 2. Sección Sobre Mí con tu Banner -->
         <section id="sobre-mi" class="content-section">
             <h2 class="section-title">Sobre Mí</h2>
+            <!-- Este es tu banner. Asegúrate que Zendeshiko.jpeg esté en assets/images/ y lo subas a GitHub -->
+            <img src="assets/images/Zendeshiko.jpeg" alt="Banner personal" class="about-banner">
             <p class="about-text">
                 Soy un apasionado estudiante de Ingeniería en Sistemas Informáticos de la Universidad del Valle en La Paz, con un fuerte enfoque en la programación y creación de soluciones digitales. Mi especialidad es el **desarrollo en Unity y páginas Web**, donde combino mi creatividad y habilidades técnicas para construir desde videojuegos y simuladores en Realidad Virtual (VR) hasta complejas páginas administrativas, dashboards y sistemas móviles. Me encanta enfrentar retos y transformar ideas en productos funcionales y elegantes.
             </p>
         </section>
 
-        <!-- 3. Sección de Proyectos -->
+        <!-- 3. Sección de Proyectos (con imágenes de URL) -->
         <section id="proyectos" class="content-section">
             <h2 class="section-title">Proyectos Destacados</h2>
             <div class="projects-grid">
-                
                 <div class="project-card">
-                    <img src="assets/images/proyecto-optica.jpg" alt="Sistema de Gestión para Óptica">
+                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8ZGFzaGJvYXJkLGFuYWx5dGljc3x8fHx8fDE2NzM5OTI0MzA&ixlib=rb-4.0.3&q=80&w=1080" alt="Sistema de Gestión para Óptica">
                     <div class="card-content">
                         <h3>Sistema de Gestión y Analítica para Óptica</h3>
                         <p>Sistema web y móvil para la gestión de inventarios, pedidos, clientes, empleados y una página de datos de analítica sobre ventas.</p>
-                        <div class="tech-stack"><span>Web</span><span>Móvil</span><span>Analítica</span></div>
-                        <div class="project-links"><a href="#" target="_blank">Ver Demo</a><a href="#" target="_blank">Código</a></div>
+                        <div class="tech-stack">
+                            <iconify-icon icon="mdi:web"></iconify-icon>
+                            <iconify-icon icon="mdi:cellphone"></iconify-icon>
+                            <iconify-icon icon="mdi:chart-line"></iconify-icon>
+                        </div>
                     </div>
                 </div>
-
                 <div class="project-card">
-                    <img src="assets/images/proyecto-vr.jpg" alt="Simulador VR de trabajo">
+                    <img src="https://images.unsplash.com/photo-1593349480503-685d1a5c6870?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8dnIsc2ltdWxhdG9yLGdhbWluZ3x8fHx8fDE2NzM5OTI1MDI&ixlib=rb-4.0.3&q=80&w=1080" alt="Simulador VR de trabajo">
                     <div class="card-content">
                         <h3>Simulador VR de Trabajo Empresarial</h3>
                         <p>Videojuego simulador usando VR que recrea trabajos de oficina con dificultad agregada y escenarios de estrés.</p>
-                        <div class="tech-stack"><span>Unity</span><span>VR</span><span>C#</span></div>
-                        <div class="project-links"><a href="#" target="_blank">Ver Demo</a><a href="#" target="_blank">Código</a></div>
+                        <div class="tech-stack">
+                            <iconify-icon icon="mdi:unity"></iconify-icon>
+                            <iconify-icon icon="mdi:virtual-reality"></iconify-icon>
+                            <iconify-icon icon="mdi:language-csharp"></iconify-icon>
+                        </div>
                     </div>
                 </div>
-
                 <div class="project-card">
-                    <img src="assets/images/proyecto-esp32.jpg" alt="Sistema de Geolocalización con ESP32">
+                    <img src="https://images.unsplash.com/photo-1617799895333-bdd135753388?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8aW90LGNpcmN1aXQsZXNwMzJ8fHx8fHwxNjczOTkyNTU0&ixlib=rb-4.0.3&q=80&w=1080" alt="Sistema de Geolocalización con ESP32">
                     <div class="card-content">
                         <h3>Sistema de Geolocalización con ESP32</h3>
                         <p>Aparato rastreador con ESP32 que muestra datos de ubicación en tiempo real en una página web.</p>
-                        <div class="tech-stack"><span>ESP32</span><span>IoT</span><span>JavaScript</span></div>
-                        <div class="project-links"><a href="#" target="_blank">Ver Demo</a><a href="#" target="_blank">Código</a></div>
+                         <div class="tech-stack">
+                            <iconify-icon icon="mdi:memory"></iconify-icon>
+                            <iconify-icon icon="mdi:map-marker"></iconify-icon>
+                            <iconify-icon icon="mdi:language-javascript"></iconify-icon>
+                        </div>
                     </div>
                 </div>
-                
-                <div class="project-card">
-                    <img src="assets/images/proyecto-sweetfit.jpg" alt="Sistema de Inventario SweetFit">
-                    <div class="card-content">
-                        <h3>Sistema de Inventario en SweetFit</h3>
-                        <p>Sistema de inventario y pedidos personalizado para automatizar las ventas de la empresa Sweet Fit.</p>
-                        <div class="tech-stack"><span>Web</span><span>Backend</span><span>Base de Datos</span></div>
-                        <div class="project-links"><a href="#" target="_blank">Ver Demo</a><a href="#" target="_blank">Código</a></div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <img src="assets/images/proyecto-inventario.jpg" alt="App de visualización de Inventario">
-                    <div class="card-content">
-                        <h3>App de Visualización de Inventario</h3>
-                        <p>App móvil Android para registro de clientes y visualización intuitiva de datos de inventario en la nube.</p>
-                        <div class="tech-stack"><span>Android</span><span>Kotlin</span><span>Cloud</span></div>
-                        <div class="project-links"><a href="#" target="_blank">Ver Demo</a><a href="#" target="_blank">Código</a></div>
-                    </div>
-                </div>
-
             </div>
         </section>
 
@@ -175,9 +160,11 @@
         </div>
     </footer>
 
-    <!-- Scripts de Animación -->
+   <!-- Scripts de Animación y Librerías -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <!-- Script para los iconos -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
