--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self' https://*.netlify.app;">
     
     <!-- Librerías de Scripts (Three.js via importmap) -->
+    <!-- DENTRO DEL <head> -->
     <script type="importmap">
         {
             "imports": {
                 "three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.module.js",
-                "three/addons/": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/examples/jsm/"
+                "three/addons/": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/examples/jsm/",
+                "gsap": "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js",
+                "gsap/ScrollTrigger": "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
             }
         }
     </script>
@@ -160,9 +163,6 @@
         </div>
     </footer>
 
-   <!-- Scripts de Animación y Librerías -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <!-- Script para los iconos -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script type="module" src="js/main.js"></script>
