--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             "imports": {
                 "three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.module.js",
                 "three/addons/": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/examples/jsm/",
-                "gsap": "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js",
-                "gsap/ScrollTrigger": "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+                "gsap": "https://cdn.jsdelivr.net/npm/gsap@3.12.5/index.js",
+                "gsap/ScrollTrigger": "https://cdn.jsdelivr.net/npm/gsap@3.12.5/ScrollTrigger.js"
             }
         }
     </script>
