Correcion en el Form

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- 5. Sección de Contacto (COMPLETA) -->
         <section id="contacto" class="content-section">
             <h2 class="section-title animate-on-scroll">Hablemos</h2>
-            <form name="contacto" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="animate-on-scroll">
+            <form name="contacto" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/gracias.html" class="animate-on-scroll">
                 <input type="hidden" name="form-name" value="contacto">
                 <p class="hidden"><label>No llenes esto si eres humano: <input name="bot-field"></label></p>
                 <div class="form-group">
